API and showcase for the static graph
